Update JVM Tuning